# minecraft-clone

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  install.py
assets/shaders/: fragment.fs  vertex.vs
include/: stb_image.h
src/: main.c  shader.c  shader.h
